--- a/css/styles.css
+++ b/css/styles.css
@@ -72,10 +72,26 @@ p {
 
   cursor: pointer;
 }
+.section-title {
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+.title {
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
 /*хедер*/
 .site-nav {
   display: flex;
-  align-items: center;
 }
 .nav {
   display: flex;
@@ -92,22 +108,18 @@ p {
 .logo-part-black {
   color: var(--main-text-color);
 }
-/*главная навигация*/
+/*навигация*/
 .main-nav {
   display: flex;
   align-items: center;
   margin-left: 93px;
 }
-.main-nav .link,
-.contacts .link {
-  display: block;
+.link {
+  display: flex;
+  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
-}
-.main-nav .item + .item {
-  margin-left: 50px;
-}
-.main-nav a {
+
   color: var(--main-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -116,15 +128,18 @@ p {
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.main-nav a:hover,
-.main-nav a:focus {
+.main-nav .item + .item {
+  margin-left: 50px;
+}
+.link:hover,
+.link:focus {
   color: var(--accent-color);
 }
-.main-nav .current {
+.current {
   position: relative;
   color: var(--accent-color);
 }
-.main-nav .current::after {
+.current::after {
   content: "";
   position: absolute;
   left: 0;
@@ -134,9 +149,7 @@ p {
   border-radius: 2px;
   background-color: var(--accent-color);
 }
-
-/*линки*/
-
+/*линки-контакты*/
 .contacts {
   display: flex;
   margin-left: auto;
@@ -144,29 +157,11 @@ p {
 .contacts .item + .item {
   margin-left: 50px;
 }
-.contacts a {
-  color: var(--secondary-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contacts a:hover,
-.contacts a:focus {
-  color: var(--accent-color);
-}
-.contacts .link {
-  display: flex;
-  align-items: center;
-}
 .contacts-icon {
   padding: 0px;
   margin-right: 10px;
   fill: currentColor;
 }
-
 /*Страница студия*/
 /*герой*/
 .hero {
@@ -206,17 +201,15 @@ p {
   line-height: 1.36;
   text-transform: uppercase;
 }
-
 .hero-button {
   margin-top: 30px;
   padding: 10px 32px;
 }
-
 /*преимущества*/
 .advantages {
   display: flex;
 }
-.icon-background {
+.advantages-background {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -232,9 +225,6 @@ p {
 }
 .advantages-title {
   margin-top: 30px;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
 }
 .advantages-text {
   margin-top: 10px;
@@ -244,14 +234,9 @@ p {
   font-size: 14px;
   line-height: 1.71;
 }
-/*работа и команда*/
+/*работа*/
 .work {
   padding-top: 0;
-}
-.section-title {
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
 }
 .work-example {
   display: flex;
@@ -268,7 +253,7 @@ p {
 .work-example .item:nth-child(3n) {
   margin-right: 0;
 }
-.item-image {
+.work-example-image {
   display: block;
 }
 .work-example .item::before {
@@ -279,14 +264,11 @@ p {
   bottom: 0;
   background-color: var(--label-background);
 }
-.lable-text {
+.work-example-title {
   position: absolute;
   bottom: 27px;
 
   font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
   color: var(--main-background-color);
 }
 /*команда*/
@@ -297,35 +279,32 @@ p {
   display: flex;
   margin-top: 50px;
 }
-.team .human {
+.team-member {
   width: calc((100% - 90px) / 4);
   margin-right: 30px;
-}
-.team .human:nth-child(4n) {
-  margin-right: 0;
-}
-.human {
+
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+
   background-color: var(--main-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
+.team-member:nth-child(4n) {
+  margin-right: 0;
+}
 .specialists {
   margin-top: 30px;
 
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.2;
-  text-align: center;
 }
 .professions {
   margin-top: 10px;
 
   color: var(--secondary-text-color);
   font-weight: 400;
-  font-size: 16px;
-  line-height: 1.2;
-  text-align: center;
 }
 .socials {
   display: flex;
@@ -395,20 +374,12 @@ p {
 .header-stroke {
   border-bottom: 1px solid var(--header-stroke);
 }
-/*скрытый заголовок*/
-.visually-hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-}
 /*радиокнопки*/
 .radio {
   display: flex;
   justify-content: center;
 }
-.radio-buttons {
+.radio-button {
   padding: 6px 22px;
   border: 0px;
   border-radius: 4px;
@@ -433,8 +404,8 @@ p {
 .radio .item:nth-child(5n) {
   margin-right: 0;
 }
-.radio-buttons:hover,
-.radio-buttons:focus {
+.radio-button:hover,
+.radio-button:focus {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 
@@ -442,36 +413,36 @@ p {
   color: var(--main-background-color);
 }
 /*карточки*/
-.card {
+.cards-set {
   display: flex;
   flex-wrap: wrap;
   margin-top: 50px;
 }
-.card .item {
+.cards-set .item {
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
 }
-.cards-h-f {
+.card-link {
   display: block;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.cards-h-f:hover,
-.cards-h-f:focus {
+.card-link:hover,
+.card-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.card .item:nth-child(3n) {
+.cards-set .item:nth-child(3n) {
   margin-right: 0;
 }
-.card .item:nth-last-child(-n + 3) {
+.cards-set .item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
 .card-image {
   display: block;
 }
-.card-foto {
+.card {
   position: relative;
   overflow: hidden;
 }
@@ -484,8 +455,8 @@ p {
   transform: translateY(0);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.cards-h-f:hover .card-overlay,
-.cards-h-f:focus .card-overlay {
+.card-link:hover .card-overlay,
+.card-link:focus .card-overlay {
   transform: translateY(-100%);
 }
 .card-overlay-text {
@@ -501,8 +472,8 @@ p {
   opacity: 0;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
-.cards-h-f:hover .card-overlay-text,
-.cards-h-f:focus .card-overlay-text {
+.card-link:hover .card-overlay-text,
+.card-link:focus .card-overlay-text {
   opacity: 1;
 }
 .card-text {
@@ -510,13 +481,13 @@ p {
   border: 1px solid var(--card-border);
   border-top: 0px;
 }
-.cards-title {
+.card-title {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--main-text-color);
 }
-.cards-description {
+.card-description {
   margin-top: 4px;
 
   color: var(--secondary-text-color);
@@ -560,11 +531,8 @@ p {
 .join {
   justify-content: center;
 }
-.join-text {
+.join-title {
   font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
   color: var(--main-background-color);
 }
 .join-socials {
@@ -751,13 +719,6 @@ p {
   width: 16px;
   height: 15px;
   border: 1px solid var(--main-text-color);
-}
-.visually-hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
 }
 .checkbox-text {
   margin-left: 24.38px;
