--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "utils/variables";
 @import "utils/common";
+@import "components/header";
 @import "components/logo";
 @import "components/navigation";
 @import "components/contacts";
@@ -8,5 +9,7 @@
 @import "components/work";
 @import "components/team";
 @import "components/clients";
+@import "components/radio-button";
+@import "components/cards";
 @import "components/footer";
 @import "components/modal";
